--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -23,7 +23,8 @@ permalink: "/get-started/implementation-steps.html"
           </a>
         </li>
         <li>
-          <a href="/get-started/eleventy.html">Eleventy</a>
+          <a href="/get-started/eleventy.html">
+            <div class="sr-only">Get started with </div>Eleventy</a>
         </li>
       </ul>
     </nav>
@@ -37,7 +38,7 @@ permalink: "/get-started/implementation-steps.html"
     <ol class="cagov-step-list">
       <li>
         <span class="bold">Prepare for your upgrade</span>
-        <br />
+        <br/>
         <span class="cagov-step-list-content">
           <p>Before you start, save a copy of your current site.</p>
           <p>
@@ -50,7 +51,7 @@ permalink: "/get-started/implementation-steps.html"
 
       <li>
         <span class="bold">Review Template updates</span>
-        <br />
+        <br/>
         <span class="cagov-step-list-content">
           <p>
             To understand the changes in the code, perform a code comparison in
@@ -67,7 +68,7 @@ permalink: "/get-started/implementation-steps.html"
 
       <li>
         <span class="bold">Download the State Web Template from GitHub</span>
-        <br />
+        <br/>
         <span class="cagov-step-list-content">
           <p>Download the latest Template release for your framework:</p>
           <ul>
@@ -107,7 +108,7 @@ permalink: "/get-started/implementation-steps.html"
         <span class="bold">
           Look for CSS, JavaScript, and structural changes
         </span>
-        <br />
+        <br/>
         <span class="cagov-step-list-content">
           <p>Most changes are made in:</p>
           <ul>
@@ -132,7 +133,7 @@ permalink: "/get-started/implementation-steps.html"
         <span class="bold">
           Replace older library files with the updated ones
         </span>
-        <br />
+        <br/>
         <span class="cagov-step-list-content">
           <p>
             The Template has CSS and JavaScript (JS) code base. You will replace
@@ -153,7 +154,7 @@ permalink: "/get-started/implementation-steps.html"
         <span class="bold">
           Integrate the new template into your environment
         </span>
-        <br />
+        <br/>
         <span class="cagov-step-list-content">
           <p>
             From your code comparison, make the necessary changes and updates to
@@ -169,7 +170,7 @@ permalink: "/get-started/implementation-steps.html"
 
       <li>
         <span class="bold">Perform necessary tests and reviews</span>
-        <br />
+        <br/>
         <span class="cagov-step-list-content">
           <p>
             After core source code has been updated, you should thoroughly
@@ -183,7 +184,7 @@ permalink: "/get-started/implementation-steps.html"
 
       <li>
         <span class="bold">Release to production</span>
-        <br />
+        <br/>
         <span class="cagov-step-list-content">
           <p>
             You’re now ready to follow your organization's change management and
